Fixed spacing in stats.js

--- a/perma_web/static/css/style-responsive.scss
+++ b/perma_web/static/css/style-responsive.scss
@@ -5123,7 +5123,7 @@ section .caption {
 		}
 	}
 
-	.daily-num-container.legend_archives {
+	.daily-num-container.legend-archives {
 		border: 2px solid $color-blue;
 
 		.num-value {
@@ -5132,7 +5132,7 @@ section .caption {
 		}
 	}
 
-	.daily-num-container.legend_users {
+	.daily-num-container.legend-users {
 		border: 2px solid $color-green;
 
 		.num-value {
@@ -5140,7 +5140,7 @@ section .caption {
 		}
 	}
 
-	.daily-num-container.legend_orgs {
+	.daily-num-container.legend-orgs {
 		border: 2px solid $color-orange;
 
 		.num-value {
@@ -5148,7 +5148,7 @@ section .caption {
 		}
 	}
 
-	.daily-num-container.legend_libraries {
+	.daily-num-container.legend-libraries {
 		border: 2px solid #F14FBC;
 
 		.num-value {
